Minor style change

--- a/grumpycat.html
+++ b/grumpycat.html
@@ -8,6 +8,6 @@
   </head>
   <body>
     <img src="images/grumpy.jpg" alt="Grumpy Cat" class="center" id="grumpy-cat">
-    <a href="index.html" class="button center">Begone, hooman.</a>
+    <a href="index.html" class="button center">Begone, hooman!!</a>
   </body>
 </html>
