Minor style change

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <a href="grumpycat.html" target="_blank" class="button">ABOUT ME</a>
     </div>
     <div class="card">
-      <h2>Please don't follow me.. 😂</h2>
+      <h2>Please don't follow me 😂</h2>
       <p>I'm not that interesting.</p>
       <ul>
         <li><a href="https://www.linkedin.com/in/joana-bertoldi-5bb369111/"><i class="fab fa-linkedin-in"></i></a></li>
